Bug 761572. Allow click and dblclick events to be sent to an element even if it's made display:none during the mouseup event. r=smaug